# ChangeLog for app-office/gnumeric
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-office/gnumeric/ChangeLog,v 1.247 2013/04/01 18:23:27 ago Exp $

  01 Apr 2013; Agostino Sarubbo <ago@gentoo.org> gnumeric-1.12.0-r1.ebuild:
  Stable for sparc, wrt bug #458984

  01 Apr 2013; Agostino Sarubbo <ago@gentoo.org> gnumeric-1.12.0-r1.ebuild:
  Stable for alpha, wrt bug #458984

*gnumeric-1.12.1 (31 Mar 2013)

  31 Mar 2013; Gilles Dartiguelongue <eva@gentoo.org> +gnumeric-1.12.1.ebuild:
  Version bump.

  29 Mar 2013; Agostino Sarubbo <ago@gentoo.org> gnumeric-1.12.0-r1.ebuild:
  Stable for ia64, wrt bug #458984

  27 Mar 2013; Agostino Sarubbo <ago@gentoo.org> gnumeric-1.12.0-r1.ebuild:
  Stable for ppc64, wrt bug #458984

  26 Mar 2013; Agostino Sarubbo <ago@gentoo.org> gnumeric-1.12.0-r1.ebuild:
  Stable for ppc, wrt bug #458984

  25 Mar 2013; Agostino Sarubbo <ago@gentoo.org> gnumeric-1.12.0-r1.ebuild:
  Stable for x86, wrt bug #458984

  25 Mar 2013; Agostino Sarubbo <ago@gentoo.org> gnumeric-1.12.0-r1.ebuild:
  Stable for amd64, wrt bug #458984

  05 Mar 2013; Gilles Dartiguelongue <eva@gentoo.org> -gnumeric-1.12.0.ebuild:
  Clean up old revisions.

*gnumeric-1.12.0-r1 (29 Dec 2012)

  29 Dec 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
  +gnumeric-1.12.0-r1.ebuild:
  Fix build failure with gobject-introspection-1.34 (bug #448992).

  27 Dec 2012; Pacho Ramos <pacho@gentoo.org> gnumeric-1.12.0.ebuild:
  Add forgotten PYTHON_USEDEP (thanks to Gilles for noticing)

*gnumeric-1.12.0 (27 Dec 2012)

  27 Dec 2012; Pacho Ramos <pacho@gentoo.org> +gnumeric-1.12.0.ebuild:
  Version bump

  23 May 2012; Tomáš Chvátal <scarabeus@gentoo.org> metadata.xml:
  Drop unused local desc.

  03 May 2012; Jeff Horelick <jdhore@gentoo.org> gnumeric-1.10.17.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  15 Apr 2012; Gilles Dartiguelongue <eva@gentoo.org> -gnumeric-1.10.13.ebuild,