@@ -1,29 +1,19 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST gnumeric-1.10.17.tar.xz 14332716 SHA256 8f105a10dc0dd47e14df2879591d2f28482fd03809fa95977dd4d1470a02f963 SHA512 ec58a3fd7eb8bf81b161dda2220392927388d7aff673212f1d6169f3bd1b5fd3c69b08303927fea03a6cc5c93a39ca7433896880ebbc654fb97b65f22e9952f0 WHIRLPOOL 7d6bdea2ea057c76e089b0eadb8f7f226bf0adfe04198a9f145f86fb27330f0a642decb798bc66090a7e880da3b86cc0b40577a5a4fc3e1212b407129e27e111
 DIST gnumeric-1.12.0-annotation-syntax.patch.xz 13408 SHA256 8cc904ced03d1cdb894afa896c7fc8be22bd3cf16f0c8427c965eb813a406a48 SHA512 b1062a75750630e4e0cb479a994db2c98aae4668355a7756bd6ca9f64407571d73af0fd428453e373d4d0d9f77d842869cbe4f7d5ba0054103cd8add0e09d5b6 WHIRLPOOL aec5b51c9af1e6b3806c7f5f22930c41d42ed0dfbcb66407a18ded9cf565b78daae76d2b8a5952ce4f7379b11c9bad68a02982f7248a62d0c5a87e8ae60a71f4
 DIST gnumeric-1.12.0.tar.xz 15631708 SHA256 037b53d909e5d1454b2afda8c4fb1e7838e260343e36d4e36245f4a5d0e04111 SHA512 5bcf5e04d3c871d755a560207db2bce9d81bbe24f9c330a8a0555a386c38f505997c0a24a44afe0ab28539f03a921ce13f82ea8c6e828e17d998ce4951639223 WHIRLPOOL 2de92f2fecc9389e92a1e50f3c37361e0c06e792d0e75ca17beb1a5c6a9b344bc14d3eeef561ecdda5a3e6c60f4fe73f6fb2fd22e343b6edf842f7a81d64a825
 DIST gnumeric-1.12.1.tar.xz 15692328 SHA256 0f5a7af3acae7db643eb00e8b4fca6a9e90162259c6a73e4214cfa8c96cc3901 SHA512 641d8ac9e57f397a84c0112c325482093ef0c5172fec2027788cb53193e065ebf093ffa91949da10907c1cd9150d73d84fb96096df8e7f4f7ad3cd9d2bb7ca29 WHIRLPOOL 53581cc8cd37ffc4a8a5c246da4e6c9f9e48e0ec01eb967ed1d421709f85636eabd871d306a34bc8ddfb82303b02d7bebbfff92e8495f0fc8b9eb444e55d79a9
-EBUILD gnumeric-1.10.17.ebuild 1587 SHA256 5a3a242a2259d3edc3aa5b8a24681ba1df21c002b447164d34c157878b26e199 SHA512 aa21e3c6b6a0e33371754cfea9cf210efc3a21e8bf7de581997b1278569767547aba0eef9d72161360747d5f5c77cffa5914da685cf8cc802d28b2d247b761c2 WHIRLPOOL 2d9501c3cee42922c91dc7104faac3c7a6c99557a2c1b13200db99e25b40bff36611b31fc3a0b7eae1ee1444824c5da75aa190aa3325e0d7b5d122600a6f0778
+DIST gnumeric-1.12.2.tar.xz 15517296 SHA256 d6fda191c1c76be2ede21fe78b8c9f96d39aea82ccfb537775a83bf88d781874 SHA512 6f41941e40f5fb3cafebb194082e6d4597caee6b9b1d2c271b8d67e8c78e2d87e366932914d62bd6f5ce6c1bbc2b7e26d5800fbfbc16905576057c3de1244fed WHIRLPOOL 6d8aab376cde73feb2d51d2110ec12c3eecf6e31f8d815e332c88dbfd21040f31828563d4ab5464b79fa238f40e3cefc066b65c0cd5e890eed061dd544ead7a9
 EBUILD gnumeric-1.12.0-r1.ebuild 1886 SHA256 fd6400c6fa9584e87a4701d6a116f82087819bc943146f6dd29cd02bc17fbea2 SHA512 574f5b13f2382870b325131940b34c4f7c31e934ce6f4cee6c7ef490f045e72241f4016c9250e8a6388b5d31bd16c669cd22a840b76cc828d5eeff277cc5e2f0 WHIRLPOOL f3b324f698f5bbcd2362fcb93a0d196bacd569d3e71505afd08a96503212bcca0a79c919f5e4c7b1240c7803f50193844ac46b69aa88726ac1194d92a05342c3
 EBUILD gnumeric-1.12.1.ebuild 1551 SHA256 e90568be023a88371a5312bbbefdbe5fac1e70afe12539305239e83fc4ea4e66 SHA512 7c798c460180b2b8dab27ac071100d1c6f3f873a0b1a1ef8ca9102bb0c56589f99d2f2f4f0155b60d3ea2552ea2617133c9b2fad51b4532b71a07b7501cabf74 WHIRLPOOL 3ea8cd27fc78d9cfb72882681fb9add15c5326b859aafc47c8e28892bf15e21606bcce1ac10eff669893bc25bd89bc5ba0dc5fcd09d55a62ddf38b5232eb1fd6
-MISC ChangeLog 34075 SHA256 b136eade32ba01c95a646ce40db94246731af813110f95f19481257357ce6c87 SHA512 be4c11d68745002719b12b09233cb415f50858e005a2fb71dac00e125bc1be48ab6f06cc8ef4e994f834096cf933720bc64aba67b2b707e6b487a19ea77615bd WHIRLPOOL 3d5c259023130010e236c5647cc87416b39cee80a6870c52b522d0f99caff73db5fe1a6e0ce95f817a1e4eb94907767cdf9c0ac817db6a406c28b566170850be
+EBUILD gnumeric-1.12.2.ebuild 1553 SHA256 5451469e149c44779403978b4f822899aa62dd37df421cc4d01c90500a59b0b0 SHA512 659ff22d56c531ad398efbe6a9d0ed38af16b29ad17b5471c8a2d9e12c3103b9216bae87340d61e96053c383123e33ece1e22a16c3cbc590c6d052e5113022b8 WHIRLPOOL e0f7425f74eafe3b404da64164eca324f3aa80d99542184e598bdb6e5783f9068a03f2d1b7876d542d2c7fba819944764a5d7c045f3b55a8d3391f0f25f717dc
+MISC ChangeLog 34234 SHA256 01dee174239673e863a4858476db741ef13ebbb2ada368ebed085fda80b8e88e SHA512 8f5caff32df9f4daecc5f5d4c3704d1dcfd1e8d8aa7035a97012610e61b4d4271f9cd864f5df2b510a67e9541ce430e029f1f2dbc67c372800e9788e2c837391 WHIRLPOOL f90b900664d76dc786e92fe8e075fc26f8118fcff0b02959a14fbe25aa8b64b3161b95080c314b4704667f3289b1cc0cdb48000df850a0048e80986e434932e9
 MISC metadata.xml 288 SHA256 483a2aa5f0d22403863e1179d3baec278bfe44056193d3fe85ecf2ce1f4495ff SHA512 cd58e78b65bbb9d400512d53380cf5372f891471eec1427b3f9ef32af9af744f7b18fb089a1f6e0dac6e03bcfea03035918cc45bd22c71343735b5ab222698f1 WHIRLPOOL da660558be1f76f31fff8c7166a12504710cbf7b73d5373965e613fc7f0da7d947b911a6c8b33867e3e4489a3f29400b2f7490823e1e481be588bd7118f64827
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIcBAEBCAAGBQJRWdCiAAoJELp701BxlEWf6J4P/0RRmw4nbJBODnj7nJfNUEgz
-NrQHPcBxogIrGRrsJe2LM4iK7zh7iyJVS9iDKRJlsNSi+a8776tkNnjZCsrwhAAK
-I6V6fToXaJyC4LUwcz1jW9IeEjtVthrmxrJicROD6tSCM61xGaF1Jydh9aJ5tCTj
-4TIOQoY938OmOLEp1Uh0BcWlyYgQDbw5ODC01HFLXlkXuqy5lupq6th8wLbemgd6
-kZCcxT/yFLJYyHyJuZwwlp4gFb4O8j5BAFYdMN3xWDUxFOMwrdmKuBp77BsO7ZhE
-lR8hx6v1ybzuIWhvzjz1LLXI9VQ4niSc5qVBQPEdgaaDEnReIXH/bR4pdlBUUWdR
-tvSic/ENo0VWabchouzGZJ7VF5KioNFcWGzyxdiD6xSWcIlXm3uCfAPLDVUGg8+E
-GPOeCWHMiiW/6VCxVTpyNTxYGAStGmi+iqHdyxb2e+hl5NVXhBKCrrGQyGJYrL1Y
-ipcSHdxEsk5uDlVCz/NIB2sVG0cmUPopIqdOvSKaWqV0kmA4UEnTrm7UsBWixM8U
-ANGinIRXeu3EFfttyKMum8Q3VVkBLBbVaXPLRJTdJD+jPYB3xLY0ZYPNUQKV7Sx4
-0aMfW6z/rajd4LezkFuOBDu8OolGlhfdNRhALW2p3To3IUB/G5BonZez89f9iET6
-gKNhFaA16wLePnEGKvBo
-=pzKW
+iEYEAREIAAYFAlF73mkACgkQCaWpQKGI+9QpiwCfYGZKd1tFthUEf4rb0ZkTND1K
+pB4AmgOzB4yu10/fpygR5MOVHUGtA+jt
+=5X2J
 -----END PGP SIGNATURE-----
